deploy/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    tier: backend
spec:
  replicas: 1 # 部署实例
  selector:
    matchLabels:
      app: nginx
      tier: backend
  template:
    metadata:
      labels:
        app: nginx
        tier: backend
    spec:
      volumes: #挂载
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: config
          configMap:
            name: nginx-config
            items:
              - key: config
                path: site.conf #nginx 配置文件
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/nginx/conf.d
