deploy/swoole_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: Swoole-svc
  labels:
    app: swooleApp
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30080
  selector:
    app: swooleApp
