deploy/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: phpk8s
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-server
    servicePort: 80
  rules:
    - host: *
    - http:
        paths:
          - path: /
            backend:
              serviceName: swoole-svc
              servicePort: 80
